force-app/main/default/objects/HAM_Trivia__c/HAM_Trivia__c.object-meta.xml
<CustomObject>
    <label>Trivia</label>
    <nameField>
        <displayFormat>Trivia-{0}</displayFormat>
        <label>Trivia</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trivia</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>