force-app/main/default/objects/HAM_Trivia__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifier for an active question. Only one question is active per day.</description>
    <inlineHelpText>Identifier for an active question. Only one question is active per day.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>