force-app/main/default/objects/HAM_Trivia__c/fields/Numeric_Order__c.field-meta.xml
<CustomField>
    <fullName>Numeric_Order__c</fullName>
    <description>Numeric value of the auto number field &apos;Order&apos;</description>
    <formula>VALUE( Order__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Numeric value of the auto number field &apos;Order&apos;</inlineHelpText>
    <label>Numeric Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>