force-app/main/default/objects/HAM_Trivia__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <displayFormat>{0}</displayFormat>
    <inlineHelpText>Order is helpful to identify the questions in reoccurring cycles</inlineHelpText>
    <label>Order</label>
    <type>AutoNumber</type>
</CustomField>