force-app/main/default/objects/HAM_Trivia__c/fields/Points__c.field-meta.xml
<CustomField>
    <fullName>Points__c</fullName>
    <inlineHelpText>The Points/Weightage of the question</inlineHelpText>
    <label>Points</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>