force-app/main/default/objects/HAM_Trivia__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <inlineHelpText>A question can have a max of 50K characters</inlineHelpText>
    <label>Question</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>