force-app/main/default/objects/HAM_Trivia__c/fields/Show_On_Portal__c.field-meta.xml
<CustomField>
    <fullName>Show_On_Portal__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Identifier for a question/set of questions to be shown on portal. DO NOT UNCHECK</description>
    <inlineHelpText>Identifier for a question/set of questions to be shown on portal. DO NOT UNCHECK</inlineHelpText>
    <label>Show On Portal</label>
    <type>Checkbox</type>
</CustomField>