force-app/main/default/objects/HAM_Trivia__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Question__c</columns>
    <columns>Points__c</columns>
    <columns>Show_On_Portal__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>